k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: express-demo
  template:
    metadata:
      labels:
        app: express-demo
    spec:
      containers:
        - name: app
          image: juniyadi/express-demo:latest
          ports:
            - containerPort: 4000
          imagePullPolicy: Always
