k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: node-example-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: node-example
    spec:
      containers:
        - name: node-example
          image: juniyadi/express-demo
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
