k8s/haproxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-demo
  namespace: express-demo
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
    - host: express.demo.juniyadi.id
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: express-demo
                port:
                  number: 4000
