k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-express-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: express.demo.juniyadi.id
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: svn-express-demo
                port:
                  number: 4000
