k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-demo
spec:
  selector:
    app: express-demo
  ports:
    - port: 80
      targetPort: 4000
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-demo
  name: express-demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: express.demo.juniyadi.id
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: express-demo
                port:
                  number: 4000
